test: add testcase for common library module